--- a/group_meeting.html
+++ b/group_meeting.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <!-- Wymusza, aby przeglądarka nie cache'owała strony -->
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
@@ -80,7 +79,7 @@ document.addEventListener("DOMContentLoaded", function() {
     fetch("games/games.json")
         .then(res => res.json())
         .then(games => {
-            // 🔹 Filtrujemy tylko gry z kategorii "groupMeeting"
+            // Filtrujemy tylko gry z kategorii "groupMeeting"
             const groupMeetingGames = games.filter(game => 
                 game.categories && game.categories.some(cat => cat.trim().toLowerCase() === "spotkanie w grupie")
             );
@@ -90,7 +89,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 return;
             }
 
-            // 🔹 Wyświetlanie tylko przefiltrowanych gier
+            // Wyświetlanie tylko przefiltrowanych gier
             let html = '<div class="row">';
             groupMeetingGames.forEach(game => {
                 html += `
@@ -132,13 +131,13 @@ document.addEventListener("click", function(event){
         const button = event.target;
         const modal = $("#gameModal"); // musi istnieć w DOM (fetch partiala)
 
-        // 🔹 Wstawianie treści modala
+        // Wstawianie treści modala
         modal.find("#modal-title").text(button.dataset.title);
         modal.find("#modal-image").attr("src", button.dataset.image).attr("alt", button.dataset.title);
         modal.find("#modal-description").html(button.dataset.description);
         modal.find("#modal-equipment").text(button.dataset.equipment);
 
-        // 🔹 Urozmaicenie
+        // Urozmaicenie
         if(button.dataset.variety && button.dataset.variety.trim() !== "" && button.dataset.variety !== "null"){
             modal.find("#modal-variety-row").show();
             modal.find("#modal-variety").html(button.dataset.variety);
@@ -146,7 +145,7 @@ document.addEventListener("click", function(event){
             modal.find("#modal-variety-row").hide();
         }
 
-        // 🔹 Uwaga
+        // Uwaga
         if(button.dataset.comment && button.dataset.comment.trim() !== "" && button.dataset.comment !== "null"){
             modal.find("#modal-comment-row").show();
             modal.find("#modal-comment").html(button.dataset.comment);
@@ -154,16 +153,16 @@ document.addEventListener("click", function(event){
             modal.find("#modal-comment-row").hide();
         }
 
-        // 🔹 Pokaż modal
+        // Pokazanie modala
         modal.modal("show");
 
-        // 🔹 Ustaw przewijalność modal-body
+        // Ustawienie przewijalnosci modal-body
         modal.find('.modal-body').css({
             'max-height': '80vh',
             'overflow-y': 'auto'
         });
 
-        // 🔹 Reset scrolla modal-body do góry po pełnym otwarciu
+        //  Reset scrolla modal-body do góry po pełnym otwarciu
         modal.off('shown.bs.modal').on('shown.bs.modal', function () {
             $(this).find('.modal-body').scrollTop(0);
         });
@@ -173,3 +172,4 @@ document.addEventListener("click", function(event){
 </script>
 </body>
 </html>
+
