--- a/integration_evening.html
+++ b/integration_evening.html
@@ -79,7 +79,7 @@ document.addEventListener("DOMContentLoaded", function() {
     fetch("games/games.json")
         .then(res => res.json())
         .then(games => {
-            // 🔹 Filtrujemy tylko gry z kategorii "integracyjne"
+            // Filtrujemy tylko gry z kategorii "integracyjne"
             const integracyjneGames = games.filter(game => 
                 game.categories && game.categories.some(cat => cat.trim().toLowerCase() === "integracyjne")
             );
@@ -89,7 +89,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 return;
             }
 
-            // 🔹 Wyświetlanie tylko przefiltrowanych gier
+            // Wyświetlanie tylko przefiltrowanych gier
             let html = '<div class="row">';
             integracyjneGames.forEach(game => {
                 html += `
@@ -145,7 +145,7 @@ document.addEventListener("click", function(event){
             modal.find("#modal-variety-row").hide();
         }
 
-        // 🔹 Uwaga
+        // Uwaga
         if(button.dataset.comment && button.dataset.comment.trim() !== "" && button.dataset.comment !== "null"){
             modal.find("#modal-comment-row").show();
             modal.find("#modal-comment").html(button.dataset.comment);
@@ -153,16 +153,16 @@ document.addEventListener("click", function(event){
             modal.find("#modal-comment-row").hide();
         }
 
-        // 🔹 Pokaż modal
+        // Pokaż modal
         modal.modal("show");
 
-        // 🔹 Ustaw przewijalność modal-body
+        // Ustaw przewijalność modal-body
         modal.find('.modal-body').css({
             'max-height': '80vh',
             'overflow-y': 'auto'
         });
 
-        // 🔹 Reset scrolla modal-body do góry po pełnym otwarciu
+        // Reset scrolla modal-body do góry po pełnym otwarciu
         modal.off('shown.bs.modal').on('shown.bs.modal', function () {
             $(this).find('.modal-body').scrollTop(0);
         });
@@ -172,3 +172,4 @@ document.addEventListener("click", function(event){
 </script>
 </body>
 </html>
+
