--- a/youngest.html
+++ b/youngest.html
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
     fetch("games/games.json")
         .then(res => res.json())
         .then(games => {
-            // 🔹 Filtrujemy tylko gry z kategorii "dlaNajmlodszych"
+            // Filtrujemy tylko gry z kategorii "dlaNajmlodszych"
             const dlaNajmlodszychGames = games.filter(game => 
                 game.categories && game.categories.some(cat => cat.trim().toLowerCase() === "dla najmłodszych")
             );
@@ -86,7 +86,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 return;
             }
 
-            // 🔹 Wyświetlanie tylko przefiltrowanych gier
+            // Wyświetlanie tylko przefiltrowanych gier
             let html = '<div class="row">';
             dlaNajmlodszychGames.forEach(game => {
                 html += `
@@ -134,7 +134,7 @@ document.addEventListener("click", function(event){
         modal.find("#modal-description").html(button.dataset.description);
         modal.find("#modal-equipment").text(button.dataset.equipment);
 
-        // 🔹 Urozmaicenie
+        // Urozmaicenie
         if(button.dataset.variety && button.dataset.variety.trim() !== "" && button.dataset.variety !== "null"){
             modal.find("#modal-variety-row").show();
             modal.find("#modal-variety").html(button.dataset.variety);
@@ -142,7 +142,7 @@ document.addEventListener("click", function(event){
             modal.find("#modal-variety-row").hide();
         }
 
-        // 🔹 Uwaga
+        // Uwaga
         if(button.dataset.comment && button.dataset.comment.trim() !== "" && button.dataset.comment !== "null"){
             modal.find("#modal-comment-row").show();
             modal.find("#modal-comment").html(button.dataset.comment);
@@ -150,16 +150,16 @@ document.addEventListener("click", function(event){
             modal.find("#modal-comment-row").hide();
         }
 
-        // 🔹 Pokaż modal
+        // Pokaż modal
         modal.modal("show");
 
-        // 🔹 Ustaw przewijalność modal-body
+        // Ustaw przewijalność modal-body
         modal.find('.modal-body').css({
             'max-height': '80vh',
             'overflow-y': 'auto'
         });
 
-        // 🔹 Reset scrolla modal-body do góry po pełnym otwarciu
+        // Reset scrolla modal-body do góry po pełnym otwarciu
         modal.off('shown.bs.modal').on('shown.bs.modal', function () {
             $(this).find('.modal-body').scrollTop(0);
         });
@@ -169,3 +169,4 @@ document.addEventListener("click", function(event){
 </script>
 </body>
 </html>
+
